fix: Don't modify visibility of header when scroll block

--- a/client/Components/Header/elems/HeaderMobile/HeaderMobile.module.css
+++ b/client/Components/Header/elems/HeaderMobile/HeaderMobile.module.css
@@ -16,7 +16,7 @@
     top: calc(var(--header-height) * -1);
     right: 0;
     left: 0;
-    z-index: 20;
+    z-index: 30;
   }
 
   &.visible {
